# word2vec

./: .gitignore  Makefile  README.md  pyproject.toml
.devcontainer/: devcontainer.json
data/: tiny_shakespeare.txt
docs/: experimental_notes.md  mathematical_core.md
src/word2vec_numpy/: __init__.py  cli.py  config.py  dataset.py  evaluation.py  losses.py  model.py  preprocessing.py  sampling.py  trainer.py  utils.py  vocabulary.py
tests/: test_model.py  test_preprocessing.py  test_sampling.py  test_training.py  test_vocabulary.py
