[project]
name = "word2vec-numpy"
version = "0.1.0"
description = "Skip-gram word2vec with negative sampling, implemented from scratch in pure NumPy."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Gregor Porsch" }]
dependencies = ["numpy>=1.24"]

[project.scripts]
word2vec = "word2vec_numpy.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/word2vec_numpy"]

[dependency-groups]
dev = ["pytest>=7.0", "ruff>=0.4"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
src = ["src", "tests"]
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]
